--- a/index.html
+++ b/index.html
@@ -3,5 +3,21 @@
 <head>
     <title></title>
 </head>
-<body></body>
+
+<body>
+
+<header>HTML ME SOMETHING</header>
+<img src=>
+<main></main>
+
+<article></article>
+
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+
+<footer>&copy; 2017, DWEEZE Production.</footer>
+</body>
 </html>
