--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE HTML5>
 <html>
 <head>
-    <title></title>
+    <title>Darrell's First HTML</title>
 </head>
 
 <body>
 
-<header>HTML ME SOMETHING</header>
-<img src=>
+<header align:"center">How to Install Kodi on an Amazon Firestick</header>
+<img src="https://tctechcrunch2011.files.wordpress.com/2016/10/img_0670.jpg?w=680&h=510">
 <main></main>
 
 <article></article>
 
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<p>STEP 1: Enter your Amazon account information</p>
+<p>STEP 2:Settings> System> Developer Options</p>
+<p>STEP 3: ADB Debugging> Off
+   	    Apps from unknown> On</p>
+<p>STEP 4: Applications> Collect app usage data> Off
+</p>
+<p>STEP 5: Search ES File Explorer> Download > Open
+</p>
+<p>STEP 6: +New> http://kodi.tv
+</p>
+<p>STEP 7: Downloads> ARM> Open file> Install> Open</p>
+<p>STEP 8: Sytem> File Manager> Add source> http://fusion.tvaddons.ag > Name the file “fusion”
+</p>
+<p>STEP 9: System> Settings> Addons> Install from zip> start-here> hub wizard
+</p>
+<p>STEP 10: Programs> Program Add-ons>Config Wizard> Android</p>
 
 <footer>&copy; 2017, DWEEZE Production.</footer>
 </body>
