--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE HTML5>
 <html>
-<head>
-    <title>Darrell's First HTML</title>
-</head>
+    <head>
+        <title>Darrell's First HTML</title>
+            <link rel="stylesheet" type="text/css" href="style.css">
+        </head>
 
 <body>
 
-<header align:"center">How to Install Kodi on an Amazon Firestick</header>
-<img src="https://tctechcrunch2011.files.wordpress.com/2016/10/img_0670.jpg?w=680&h=510">
-<main></main>
+    <header id="heading"><h1 ><center>How to Install Kodi on an Amazon Firestick</h1></header></center>
+    <center><img class="pics"src="https://tctechcrunch2011.files.wordpress.com/2016/10/img_0670.jpg?w=680&h=510">
+
+</center>
 
 <article></article>
 
-<p>STEP 1: Enter your Amazon account information</p>
-<p>STEP 2:Settings> System> Developer Options</p>
-<p>STEP 3: ADB Debugging> Off
+<center>
+    <p><h2>STEP 1:</h2> Enter your Amazon account information</p>
+
+<p><h2>STEP 2:</h2>Settings> System> Developer Options</p>
+
+<p><h2>STEP 3:</h2> ADB Debugging> Off
    	    Apps from unknown> On</p>
-<p>STEP 4: Applications> Collect app usage data> Off
+
+<p><h2>STEP 4:</h2> Applications> Collect app usage data> Off
 </p>
-<p>STEP 5: Search ES File Explorer> Download > Open
+
+<p><h2>STEP 5:</h2> Search ES File Explorer> Download > Open
 </p>
-<p>STEP 6: +New> http://kodi.tv
+
+<p><h2>STEP 6:</h2> +New> http://kodi.tv
 </p>
-<p>STEP 7: Downloads> ARM> Open file> Install> Open</p>
-<p>STEP 8: Sytem> File Manager> Add source> http://fusion.tvaddons.ag > Name the file “fusion”
+
+<p><h2>STEP 7:</h2> Downloads> ARM> Open file> Install> Open</p>
+
+<p><h2>STEP 8:</h2> Sytem> File Manager> Add source> http://fusion.tvaddons.ag > Name the file “fusion”
 </p>
-<p>STEP 9: System> Settings> Addons> Install from zip> start-here> hub wizard
+
+<p><h2>STEP 9:</h2> System> Settings> Addons> Install from zip> start-here> hub wizard
 </p>
-<p>STEP 10: Programs> Program Add-ons>Config Wizard> Android</p>
+
+<p><h2>STEP 10:</h2> Programs> Program Add-ons>Config Wizard> Android</p>
+</center>
 
 <footer>&copy; 2017, DWEEZE Production.</footer>
 </body>
